--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 MVP todo:
 
-add response model
+create responses w/ correct blurb
+(try going the blurb detail page route. if it doesn't work, try to get help from others using django)
 
 add delete ability on response
 
@@ -8,7 +9,7 @@ make profile model, url, views: create and detailview
 
 make profile edit and delete views
 
-add tags to blurb schema
+add tags, optional photo and link to blurb schema
 
 style
 
