--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,13 @@
 MVP todo:
 
 
-make profile model, url, views: detailview
+
 
 restrict access to bio create form if bio exists
 or
 make a 1:1 field so a user can't make multi bios
 
-make profile edit and delete views
+make profile edit views
 
 add tags, optional photo and link to blurb schema
 
