--- a/todo.txt
+++ b/todo.txt
@@ -4,9 +4,28 @@ MVP todo:
 
 
 style
+home
+delete conf
+signup
+profile
+create/edit profile
 
-done by wed? or thurs?
+remove about and blurb create pages
+
+rather than clicking a button to see responses, what if the div was highlighted if responses exist? then the whole thing is a link to expand?
+
+get hamburger menu to work
+
+next steps functionally:
+search function: tags, users
+add "follow" or "connect" functionally
+blurbs of those you follow look diff.
+add groups
+
+add weekly advice post
 
 try to add responses to responses
-get blurb form onto blurb page
+
+new model: my stuff. it contains all blurbs, and groups randomized. 
+
 
